--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,133 @@
-body {
-  margin: 0;
-  padding: 0;
-  background-color: #002855;
-  font-family: Arial, sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Tangerine');
+*{
+	margin: 0;
+	padding: 0;
+	font-family: 'Tangerine', cursive;
 }
 
-.container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+body{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
 }
 
-.logo {
-  width: 450px;
-  height: auto;
+.text{
+	margin-bottom: 300px;
 }
 
-h1 {
-  color: #fff;
-  margin-top: 0px;
+h4{
+	font-size: 30px;
+	font-family: sans-serif;
+	text-align: center;
+	letter-spacing: 2px;
+	color: #ffffff;
 }
 
-@media screen and (max-width: 768px) {
-  .logo {
-    width: 150;
-  }
+h5{
+	font-size: 40px;
+	text-align: center;
+	letter-spacing: 2px;
 }
+
+h3{
+	font-size: 30px;
+	text-align: center;
+	color: #000000;
+}
+
+section{
+	position: relative;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: linear-gradient(#00b5e2,#002855);
+}
+
+section h2{
+	position: relative;
+	text-align: center;
+	font-size: 160px;
+	color: #fff;
+	text-shadow: 0 5px 102px rgba(0, 0, 0, 0.2);
+}
+
+
+section h2:before{
+	content: '';
+	position: absolute;
+	top: -44px;
+	left: -100px;
+	width: 200px;
+	height: 200px;
+	background: transparent;
+	border-left: 15px solid #fff;
+	border-radius: 50%;
+	transform: rotate(-30deg);
+	box-shadow: -14px 1px 10px rgba(0, 0, 0, 0.1);
+}
+
+.mosque{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 400px;
+	background: url('mosque.png');
+	background-repeat: repeat-x;
+	background-size: 1200px;
+	z-index: 1;
+	pointer-events: none;
+	animation: animate 20s linear infinite;
+}
+
+@keyframes animate{
+	0%
+	{
+		background-position: 0px;
+	}
+	100%
+	{
+		background-position: 1200px;
+	}
+}
+
+.mosque:before{
+	content: '';	
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 600px;
+	background: url('mosque.png');
+	background-repeat: repeat-x;
+	background-size: 1600px;
+	z-index: 1;
+	pointer-events: none;
+	opacity: 0.1;
+	animation: animateReverse 40s linear infinite;
+}
+
+@keyframes animateReverse{
+	0%
+	{
+		background-position: 1600px;
+	}
+	100%
+	{
+		background-position: 0px;
+	}
+}
+
+.particles-js-canvas-el{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%
+
+}
+
+
